--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,13 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": "^7.2",
         "hnhdigital-os/laravel-model-schema": "~1.0",
         "moneyphp/money": "^3.1"
     },
     "require-dev": {
-        "illuminate/database": "4.*|5.*",
-        "phpunit/phpunit": "^7.0",
-        "symfony/thanks" : "*"
+        "illuminate/database": "5.*|6.*",
+        "phpunit/phpunit": "^8.3",
     },
     "autoload": {
         "psr-4": {
@@ -36,7 +35,9 @@
             "phpcs -p -s --standard=PSR2 ./src ./tests"
         ],
         "phpmd": [
-            "phpmd ./src phpmd.xml"
+            "phpmd ./src text phpmd.xml"
         ]
-    }
+    },
+    "prefer-stable": true,
+    "minimum-stability" : "dev"
 }
