--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "illuminate/database": "5.*|6.*",
-        "phpunit/phpunit": "^8.3",
+        "phpunit/phpunit": "^8.3"
     },
     "autoload": {
         "psr-4": {
